feat(api): implement profile endpoints
* feat: implement profile endpoints

* fix: check user owns profile for update, delete

* chore: code clean up

* fix: add user entity to mock tests

* chore: update openapi schema and api-client

* fix: determine user id from request

* chore: update generated api-client

* chore: rebase and fix imports

* chore: use isActive flag on profiles instead of deleting

* fix: create get user entity, no entities returned to client
