# packages/api/openapi.json
@@ -515,39 +515,8 @@
           }
         },
         "responses": {
-          "200": {
+          "201": {
             "description": "A profile was created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CreateProfileDto"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "profile"
-        ]
-      }
-    },
-    "/api/profile/{id}": {
-      "get": {
-        "operationId": "Profile_findOne",
-        "summary": "Gets a profile",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A profile was retrieved",
             "content": {
               "application/json": {
                 "schema": {
@@ -587,6 +556,37 @@
         "responses": {
           "200": {
             "description": "A profile was updated"
+          }
+        },
+        "tags": [
+          "profile"
+        ]
+      }
+    },
+    "/api/profile/{id}": {
+      "get": {
+        "operationId": "Profile_findOne",
+        "summary": "Gets a profile",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A profile was retrieved",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateProfileDto"
+                }
+              }
+            }
           }
         },
         "tags": [
