# packages/api/src/modules/profile/dto/create-profile.dto.ts
@@ -1,1 +1,8 @@
-export class CreateProfileDto {}
+export class CreateProfileDto {
+  description?: string
+  instagramUrl?: string
+  tiktokUrl?: string
+  youtubeUrl?: string
+  discordUrl?: string
+  twitchUrl?: string
+}
